Add site_source hidden field to track form submissions

--- a/index.html
+++ b/index.html
@@ -1666,6 +1666,8 @@
         <i class="fas fa-info-circle"></i> About
       </a>
       <form id="referralForm" onsubmit="submitToSupabase(event)">
+        <!-- Hidden field to track site source -->
+        <input type="hidden" name="site_source" value="florida-global">
 
         <!-- Basic Information Fields -->
         <div class="form-step" style="margin-bottom: 8px;">
