--- a/index.html
+++ b/index.html
@@ -2928,15 +2928,13 @@
         const response = await fetch('https://baloo8721.app.n8n.cloud/webhook-test/527411b9-101c-41fb-b63f-a5daf6386c0a', {
           method: 'POST',
           headers: {
-            'Content-Type': 'application/json',
-            'Accept': 'application/json'
+            'Content-Type': 'application/json'
           },
           body: JSON.stringify(data)
         });
         
         if (!response.ok) {
-          const errorText = await response.text();
-          throw new Error('Failed to submit form');
+          throw new Error('Failed to submit form to n8n webhook');
         }
         
         // Show success message with animation
