Add translations for About and Learn Crypto popups, improve mobile UI for select dropdowns, and update configuration
- Added complete translations for About and Learn Crypto popups in all 12 languages
- Fixed duplicate emoji issue in custom select dropdowns
- Improved mobile UI for property type and client type selectors with better scrolling
- Updated .gitignore to exclude supabase-helper.js
- Added .env.example, CUSTOMIZATION_GUIDE.md, and SECURITY.md
- Updated config.js with webhook URL configuration

--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Web3 Realty Bot - Your expert for Florida real estate and Web3 transactions">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Web3 Realty Bot</title>
+  
+  <!-- DNS Prefetch for external resources -->
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+  
+  <!-- Preload critical CSS -->
+  <link rel="preload" href="styles.css" as="style">
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2/dist/transformers.min.js"></script>
-  <!-- Google Analytics -->
+  
+  <!-- Defer non-critical scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2/dist/transformers.min.js" defer></script>
+  
+  <!-- Google Analytics - Load asynchronously -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
